@@ -4,6 +4,8 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
+2011-02-03  Vasco Nunes
+	* MoviePTGate plugin updated.
 
 2011-02-02  Michael Jahn
 	* [#710860] cannot import imdb movie titles starting with a bracket
